vlib/v/checker/tests/invalid_defer_mode_err.vv
fn main() {
	defer {} // ok
	defer(fn) {} // ok
	defer(fn1) {} // fail
}
